--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "@ngui/map": "^0.20.1",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
     "@types/googlemaps": "^3.30.3",
     "ammap3": "github:amcharts/ammap3",
     "angular-datatables": "^5.0.0",
